--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Finance App</string>
+    <string name="font_fontFamily_medium">sans-serif-medium</string>
 
 </resources>
