--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Finance App</string>
     <string name="font_fontFamily_medium">sans-serif-medium</string>
+    <string name="google_api_key">AIzaSyDAON6rMNBoOtF6islbzJ5A91SOBVQMYj8</string>
 
 </resources>
