--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Finance App</string>
     <string name="font_fontFamily_medium">sans-serif-medium</string>
-    <string name="google_api_key">AIzaSyDAON6rMNBoOtF6islbzJ5A91SOBVQMYj8</string>
+    <string name="google_map_api_key">AIzaSyDAON6rMNBoOtF6islbzJ5A91SOBVQMYj8</string>
+    <string name="google_api_key">AIzaSyCJ-ZXF9bJLte4_kTa2vBCvXdAsXLTeKuA</string>
 
 </resources>
